--- a/css/theme/yatil.css
+++ b/css/theme/yatil.css
@@ -15,7 +15,7 @@ body {
   color: #fff; }
 
 .reveal {
-  font-family: "Tisa Sans Pro", sans-serif;
+  font-family: "ff-tisa-sans-web-pro", "Tisa Sans Pro", sans-serif;
   font-size: 36px;
   font-weight: normal;
   }
@@ -41,7 +41,7 @@ body {
 .reveal .likeh5,
 .reveal .likeh6 {
   margin: 0 0 20px 0;
-  font-family: "Tisa Pro", serif;
+  font-family: "ff-tisa-web-pro", "Tisa Pro", serif;
   text-transform: none;
   text-shadow: none;
   -moz-hyphens: none;
